--- a/PCHUBStore/Areas/Support/Views/Shared/_ShipmentManagerLayout.cshtml
+++ b/PCHUBStore/Areas/Support/Views/Shared/_ShipmentManagerLayout.cshtml
@@ -24,9 +24,8 @@
 
             <!-- Sidebar - Brand -->
             <li class="nav-item">
-                <a style="display: inline-block" class="nav-link text-white" asp-area="Administration" asp-controller="Blacksmith" asp-action="Index">
-                    <img src="~/img/FinalLogo.png" style="width: inherit; height: inherit;" alt="Alternate Text" />
-                    <p class="text-center">Electronics Hub</p>
+                <a style="display: inline-block" class="nav-link text-white" asp-area="Support" asp-controller="ShipmentManager" asp-action="Index">
+                    <img src="~/img/ShipmentManager.png" style="width: 13em; height: 6em;" alt="Alternate Text" />
                 </a>
             </li>
 
@@ -34,56 +33,8 @@
             <li class="nav-item active">
                 <a class="nav-link">
                     <i class="fas fa-fw fa-tachometer-alt"></i>
-                    <span>Dashboard</span>
+                    <span>Shipment Manager</span>
                 </a>
-            </li>
-
-            <!-- Divider -->
-            <hr class="sidebar-divider">
-
-            <!-- Heading -->
-            <div class="sidebar-heading">
-                Interface
-            </div>
-
-
-
-            <!-- Nav Item - Utilities Collapse Menu -->
-            <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities" aria-expanded="true" aria-controls="collapseUtilities">
-                    <i class="fas fa-fw fa-wrench"></i>
-                    <span>Utilities</span>
-                </a>
-                <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities" data-parent="#accordionSidebar">
-                    <div style="font-size: 10px" class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">Custom Utilities:</h6>
-
-                        <a class="collapse-item" asp-area="Administration" asp-controller="Blacksmith" asp-action="EditUserIndexPage">Edit User Index Page</a>
-
-                        <a class="collapse-item" asp-area="Administration" asp-controller="Blacksmith" asp-action="EditUserCategoryPage">Edit User Category Page</a>
-
-                        <a class="collapse-item" asp-area="Administration" asp-controller="Products" asp-action="CreateCategory">Create New Category</a>
-
-                        <a class="collapse-item" asp-area="Administration" asp-controller="Products" asp-action="CreateProduct">Create New Product For Category</a>
-
-                        <a class="collapse-item" asp-area="Administration" asp-controller="Filters" asp-action="CreateBasicFilters">Create Basic Filters For Category</a>
-
-                        <a class="collapse-item" asp-area="Administration" asp-controller="Filters" asp-action="CreateFilterCategory">Create New Filter Category</a>
-
-                        <a class="collapse-item" href="">Create New Admin Account</a>
-
-                        <a class="collapse-item" href="">Create New Worker Account</a>
-
-                        <a class="collapse-item" asp-area="Administration" asp-controller="Products" asp-action="InsertJsonProduct">Insert Product As Json</a>
-
-
-                        <a class="collapse-item" asp-area="Administration" asp-controller="Characteristics" asp-action="Create">Create Characteristics Template</a>
-
-                        <a class="collapse-item" asp-area="Administration" asp-controller="Characteristics" asp-action="CreateCategory">Create Characteristics Category</a>
-
-                        <a class="collapse-item" asp-area="Administration" asp-controller="Filters" asp-action="UpdateFilterCategory">Update Filters Category</a>
-                    </div>
-                </div>
             </li>
 
             <!-- Divider -->
@@ -118,24 +69,21 @@
                         <a class="collapse-item" href="/Category/Laptops">Category Laptops</a>
                         <div class="collapse-divider"></div>
                         <h6 class="collapse-header">Other Pages:</h6>
-                        <a class="collapse-item" href="">All Users</a>
-                        <a class="collapse-item" href="">All Workers</a>
-                        <div class="collapse-divider"></div>
-                        <h6 class="collapse-header">Charts:</h6>
-                        <a class="collapse-item" href="blank.html">Users Activity</a>
-                        <a class="collapse-item" href="blank.html">Products Activity</a>
-                        <a class="collapse-item" href="blank.html">Workers Activity</a>
-                        <a class="collapse-item" href="blank.html">Orders</a>
+                        <a class="collapse-item" asp-area="Support" asp-controller="Home" asp-action="Index">Support Index</a>
+                        <a class="collapse-item" asp-area="Support" asp-controller="Forum" asp-action="CreateForumPost">Forum</a>
+                        <a class="collapse-item" asp-area="Support" asp-controller="Chat" asp-action="ChatRoom">Chat Room</a>
                     </div>
                 </div>
             </li>
 
             <!-- Nav Item - Tables -->
             <li class="nav-item">
-                <a class="nav-link" href="tables.html">
+          
+                <a class="nav-link" asp-area="Support" asp-controller="ShipmentManager" asp-action="Index">
                     <i class="fas fa-shipping-fast"></i>
                     <span>Shipments</span>
                 </a>
+
             </li>
 
             <!-- Divider -->
@@ -150,27 +98,15 @@
 
         <!-- Content Wrapper -->
         <div id="content-wrapper" class="d-flex flex-column">
-
             <div id="content">
                 <!-- Topbar -->
                 <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
-
                     <!-- Sidebar Toggle (Topbar) -->
                     <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
                         <i class="fa fa-bars"></i>
                     </button>
 
-                    <!-- Topbar Search -->
-                    <form class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
-                        <div class="input-group">
-                            <input type="text" class="form-control bg-light border-0 small" placeholder="Search for..." aria-label="Search" aria-describedby="basic-addon2">
-                            <div class="input-group-append">
-                                <button class="btn btn-primary" type="button">
-                                    <i class="fas fa-search fa-sm"></i>
-                                </button>
-                            </div>
-                        </div>
-                    </form>
+                
 
                     <div class="nav-item dropdown no-arrow">
                         <a class="nav-link dropdown-toggle" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -202,7 +138,6 @@
 
     <script src="~/vendor/jquery/jquery.min.js"></script>
     <script src="~/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
     <!-- Core plugin JavaScript-->
     <script src="~/vendor/jquery-easing/jquery.easing.min.js"></script>
 
