--- a/PCHUBStore/Areas/Administration/Views/Partials/_IndexPartial.cshtml
+++ b/PCHUBStore/Areas/Administration/Views/Partials/_IndexPartial.cshtml
@@ -30,7 +30,7 @@
                 <a asp-area="Administration" asp-controller="Products" asp-action="InsertJsonProduct" style="color: white">Insert Product As Json</a>
             </div>
             <div class="col-3 border-left bg-gradient-primary">
-                <a href="" style="color: white">Open Ticket</a>
+                <a asp-area="Support" asp-controller="ShipmentManager" asp-action="Index" style="color: white">Shipments</a>
             </div>
             <div class="col-3 border-left bg-gradient-primary">
                 <a asp-area="Administration" asp-controller="Characteristics" asp-action="Create" style="color: white">Create Characteristics Template For Category</a>
