--- a/PCHUBStore/Views/ShoppingCart/ReviewCart.cshtml
+++ b/PCHUBStore/Views/ShoppingCart/ReviewCart.cshtml
@@ -93,7 +93,7 @@
         <div class="col mb-2">
             <div class="row">
                 <div class="col-sm-12  col-md-6">
-                    <button class="btn btn-block btn-light">Continue Shopping</button>
+                    <a href="/Home/Index" class="btn btn-block btn-light">Continue Shopping</a>
                 </div>
                 <div class="col-sm-12 col-md-6 text-right">
                     <button class="btn btn-lg btn-block btn-success text-uppercase">Checkout</button>
