shipment manager implemented

--- a/PCHUBStore/Areas/Administration/Views/Shared/_Layout.cshtml
+++ b/PCHUBStore/Areas/Administration/Views/Shared/_Layout.cshtml
@@ -132,7 +132,7 @@
 
             <!-- Nav Item - Tables -->
             <li class="nav-item">
-                <a class="nav-link" href="tables.html">
+                <a class="nav-link" asp-area="Support" asp-controller="ShipmentManager" asp-action="Index">
                     <i class="fas fa-shipping-fast"></i>
                     <span>Shipments</span>
                 </a>
@@ -161,9 +161,9 @@
                     </button>
 
                     <!-- Topbar Search -->
-                    <form class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
+                    <form method="get" asp-area="" asp-controller="Products" asp-action="Search" class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
                         <div class="input-group">
-                            <input type="text" class="form-control bg-light border-0 small" placeholder="Search for..." aria-label="Search" aria-describedby="basic-addon2">
+                            <input type="text" class="form-control bg-light border-0 small" name="searchInput" placeholder="Search for..." aria-label="Search" aria-describedby="basic-addon2">
                             <div class="input-group-append">
                                 <button class="btn btn-primary" type="button">
                                     <i class="fas fa-search fa-sm"></i>
