--- a/PCHUBStore/Areas/Support/Views/Shared/_Layout.cshtml
+++ b/PCHUBStore/Areas/Support/Views/Shared/_Layout.cshtml
@@ -107,6 +107,16 @@
                     </button>
 
                     <!-- Topbar Search -->
+                    <form method="get" asp-area="" asp-controller="Products" asp-action="Search" class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
+                        <div class="input-group">
+                            <input type="text" class="form-control bg-light border-0 small" name="searchInput" placeholder="Search for..." aria-label="Search" aria-describedby="basic-addon2">
+                            <div class="input-group-append">
+                                <button class="btn btn-primary" type="button">
+                                    <i class="fas fa-search fa-sm"></i>
+                                </button>
+                            </div>
+                        </div>
+                    </form>
 
                     <div class="nav-item dropdown no-arrow">
                         <a class="nav-link dropdown-toggle" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
