--- a/PCHUBStore/Areas/Administration/Views/Shared/_Layout.cshtml
+++ b/PCHUBStore/Areas/Administration/Views/Shared/_Layout.cshtml
@@ -116,16 +116,6 @@
                         <a class="collapse-item" href="/Category/Computers">Category Computers</a>
                         <a class="collapse-item" href="/Category/Monitors">Category Monitors</a>
                         <a class="collapse-item" href="/Category/Laptops">Category Laptops</a>
-                        <div class="collapse-divider"></div>
-                        <h6 class="collapse-header">Other Pages:</h6>
-                        <a class="collapse-item" href="">All Users</a>
-                        <a class="collapse-item" href="">All Workers</a>
-                        <div class="collapse-divider"></div>
-                        <h6 class="collapse-header">Charts:</h6>
-                        <a class="collapse-item" href="blank.html">Users Activity</a>
-                        <a class="collapse-item" href="blank.html">Products Activity</a>
-                        <a class="collapse-item" href="blank.html">Workers Activity</a>
-                        <a class="collapse-item" href="blank.html">Orders</a>
                     </div>
                 </div>
             </li>
@@ -135,6 +125,14 @@
                 <a class="nav-link" asp-area="Support" asp-controller="ShipmentManager" asp-action="Index">
                     <i class="fas fa-shipping-fast"></i>
                     <span>Shipments</span>
+                </a>
+            </li>
+
+            <!-- Nav Item - Charts -->
+            <li class="nav-item active">
+                <a class="nav-link" asp-area="Support" asp-controller="Charts" asp-action="Statistics">
+                    <i class="fas fa-fw fa-chart-area"></i>
+                    <span>Charts</span>
                 </a>
             </li>
 
