--- a/PCHUBStore/Areas/Support/Views/Shared/_ShipmentManagerLayout.cshtml
+++ b/PCHUBStore/Areas/Support/Views/Shared/_ShipmentManagerLayout.cshtml
@@ -78,12 +78,21 @@
 
             <!-- Nav Item - Tables -->
             <li class="nav-item">
-          
+
                 <a class="nav-link" asp-area="Support" asp-controller="ShipmentManager" asp-action="Index">
                     <i class="fas fa-shipping-fast"></i>
                     <span>Shipments</span>
                 </a>
 
+            </li>
+
+
+            <!-- Nav Item - Charts -->
+            <li class="nav-item active">
+                <a class="nav-link" asp-area="Support" asp-controller="Charts" asp-action="Statistics">
+                    <i class="fas fa-fw fa-chart-area"></i>
+                    <span>Charts</span>
+                </a>
             </li>
 
             <!-- Divider -->
